<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Developer Tools Browser by Unix Shells</string>
    <string name="url_hint">Enter URL or search</string>
    <string name="devtools">DevTools</string>
    <string name="inspect">Inspect Element</string>
    <string name="desktop_mode">Desktop Mode</string>
    <string name="mobile_mode">Mobile Mode</string>
    <string name="view_source">View Page Source</string>
    <string name="new_tab">New Tab</string>
    <string name="close_tab">Close Tab</string>
    <string name="find_in_page">Find in Page</string>
    <string name="settings">Settings</string>
    <string name="developer_tools">Developer Tools</string>
    <string name="dock_bottom">Dock to Bottom</string>
    <string name="dock_right">Dock to Right</string>
</resources>
